--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,9 @@
 
 body {
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow: hidden;
 }
 
 .gradient-background {
@@ -37,14 +37,14 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 400px;
+  width: 350px;
   padding: 50px;
   background-color: #f7f7f717;
   border-radius: 20px;
 }
 
 .minha-foto img {
-  width: 300px;
+  width: 250px;
   margin-bottom: 2rem;
 }
 
